# gplite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: publish.yaml
benchmarks/: README.md  bench_active_learning.py  bench_gaussian_process.py  bench_kernels.py  benchmark_gpy.py
examples/: active_learning_ei_max.csv  active_learning_example.py  active_learning_mae.csv  active_learning_random.csv  active_learning_uncertainty.csv  anisotropic_kernel_example.py  composite_kernels.py  kernel_comparison_example.py  save_load_example.py
examples/active learning/: basic_active_learning_example.py
examples/gaussian process/: basic_gaussian_process_example.py  string_export_example.py
examples/kernels/: anisotropic_kernel_example.py  basic_kernel_example.py  composite_kernel_example.py  kernel_comparison.py
src/gplite/: __init__.py
src/gplite/ActiveLearning/: README.md  __init__.py  active_learning.py  selection_functions.py
src/gplite/GaussianProcess/: README.md  __init__.py  gaussian_process.py
src/gplite/Kernels/: README.md  __init__.py  _base.py  _composite.py  constant.py  matern.py  periodic.py  rbf.py
src/gplite/Optimization/: README.md
src/gplite/Optimization/active_learning/: loss_functions.py  optimization.py
src/gplite/_utils/: _computation.py  _constants.py  _data.py  _types.py  _validation.py
tests/: conftest.py
tests/active_learning/: test_active_learner.py  test_selection_functions.py
tests/gaussian_process/: test_gp_fit.py  test_gp_io.py  test_gp_predict.py  test_gp_to_str.py
tests/kernels/: test_composite.py  test_constant.py  test_matern.py  test_periodic.py  test_rbf.py
tests/utils/: test_computation.py  test_data.py  test_validation.py
tests/workflows/: test_active_learning_workflow.py  test_gp_workflow.py  test_openmm_compatibility.py
(+2 files in other folders)
