[project]
name = "gplite"
version = "3.1.6"
description = "Lightweight Gaussian Process regression library"
license = { file = "LICENSE" }
authors = [{ name = "Stephen O'Connor", email = "soconnor10111@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "gaussian-process",
    "machine-learning",
    "regression",
    "active-learning",
    "bayesian"
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.urls]
Repository = "https://github.com/soconnor16/gplite"

[project.optional-dependencies]
examples = [
    "matplotlib>=3.10.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gplite"]

[dependency-groups]
dev = [
    "openmm>=8.0.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (finite-difference gradient checks, long optimization runs). Deselect with: pytest -m 'not slow'",
]

[tool.ruff]
exclude = ["examples/", "tests/"]
